--- a/webApp/Site.Master
+++ b/webApp/Site.Master
@@ -71,8 +71,8 @@
             </div>
             <div class="float-right">
                 <ul id="social">
-                    <li><a href="http://facebook.com" class="facebook">Facebook</a></li>
-                    <li><a href="http://twitter.com" class="twitter">Twitter</a></li>
+                    <li><a href="http://facebook.com/martinsundhaug" class="facebook">Facebook</a></li>
+                    <li><a href="http://twitter.com/sundhaug92" class="twitter">Twitter</a></li>
                     <li><a href="http://github.com/sundhaug92/itscon/" class="github">Github</a></li>
                 </ul>
             </div>
