Changed an application name reference to webApp

--- a/webApp/Site.Master
+++ b/webApp/Site.Master
@@ -67,7 +67,7 @@
             <div class="float-left">
                 <p>&copy;
                     <%: DateTime.Now.Year %>
-                    - My ASP.NET Application</p>
+                    - webApp</p>
             </div>
             <div class="float-right">
                 <ul id="social">
