--- a/webApp/Site.Master
+++ b/webApp/Site.Master
@@ -74,6 +74,7 @@
                     <li><a href="http://facebook.com/martinsundhaug" class="facebook">Facebook</a></li>
                     <li><a href="http://twitter.com/sundhaug92" class="twitter">Twitter</a></li>
                     <li><a href="http://github.com/sundhaug92/itscon/" class="github">Github</a></li>
+                    <li><a href="http://www.itslearning.com/" class="itslearning">it's learning</a></li>
                 </ul>
             </div>
         </div>
