--- a/webApp/Site.Master
+++ b/webApp/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="webApp.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Master.cs" Inherits="webApp.SiteMaster" %>
 
 <!DOCTYPE html>
 <html lang="en">
